--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>  
     <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>计算相隔周数（上取整）</title>  
+    <title>计算开学第几周</title>  
     <style>  
         body {  
             font-family: Arial, sans-serif;  
             text-align: center;  
             margin-top: 50px;  
         }  
-        #result {  
+        #weekNumber {  
             font-size: 24px;  
             color: #333;  
             margin-top: 20px;  
@@ -18,27 +18,32 @@
     </style>  
 </head>  
 <body>  
-    <h1>计算今天离2024年9月2日相隔几周（上取整）</h1>  
-    <div id="result"></div>  
+    <h1>计算今天是2024年9月2日开学以来的第几周</h1>  
+    <div id="weekNumber"></div>  
   
     <script>  
-        // 定义目标日期  
-        const targetDate = new Date('2024-09-02');  
+        // 定义开学日期  
+        const startOfSchoolDate = new Date('2024-09-02');  
   
         // 获取当前日期  
         const currentDate = new Date();  
   
         // 计算两个日期之间的毫秒差  
-        const timeDifference = targetDate - currentDate;  
+        const timeDifference = currentDate - startOfSchoolDate;  
   
         // 将毫秒差转换为天数  
-        const daysDifference = timeDifference / (1000 * 60 * 60 * 24);  
+        const daysDifference = Math.floor(timeDifference / (1000 * 60 * 60 * 24));  
   
-        // 将天数差异转换为周数（上取整）  
-        const weeksDifference = Math.ceil(daysDifference / 7);  
+        // 将天数差异转换为周数（四舍五入到最接近的整数）  
+        const weeksDifference = Math.round(daysDifference / 7);  
+  
+        // 考虑到开学日可能是那一周的第一天或之前，需要调整周数计算逻辑  
+        // 如果开学日不是周一，我们需要根据开学日是那一周的哪一天来调整周数  
+        // 但为了简化，这里我们假设开学日总是周一，并且直接显示计算结果  
+        // 如果不是周一，你可能需要添加额外的逻辑来处理这种情况  
   
         // 将结果输出到网页上  
-        document.getElementById('result').innerText = `今天是第 ${weeksDifference} 周（上取整）`;  
+        document.getElementById('weekNumber').innerText = `今天是开学以来的第 ${weeksDifference} 周`;  
     </script>  
 </body>  
 </html>
