--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
   
         // 将结果输出到网页上  
         document.getElementById('weekNumber').innerText = `今天是开学以来的第 ${weeksDifference} 周（上取整）`;  
+        <div id="container"></div>
+<script src="runner.js"></script>
+<script>
+ initRunner('#container');
+</script>
     </script>  
 </body>  
 </html>
